This is the first crack at updating ds-java to Java 21.
Lots of changes.